<<<<<<< HEAD
[gd_scene load_steps=10 format=3 uid="uid://dbufvnolf7jan"]
=======
[gd_scene load_steps=8 format=3 uid="uid://dbufvnolf7jan"]
>>>>>>> 0915821e5da44ee2be2dbbf80583f1c78f000a7f

[ext_resource type="Script" path="res://src/menu_controller.gd" id="1_hp4ah"]
[ext_resource type="Texture2D" uid="uid://60a6hh5el45t" path="res://res/Untitled design.png" id="2_0tulo"]
[ext_resource type="Texture2D" uid="uid://1t6k8isvhu8o" path="res://USE ARROW KEY TO MOVE AROUND (3).png" id="3_74gwj"]
[ext_resource type="Script" path="res://Start_button.gd" id="3_p8ok8"]
[ext_resource type="Script" path="res://src/scroll_label.gd" id="4_1p308"]
<<<<<<< HEAD
[ext_resource type="PackedScene" uid="uid://db81jaujnyrfa" path="res://level_easy.tscn" id="5_6feo4"]
[ext_resource type="PackedScene" uid="uid://dsee02ohsic1e" path="res://character.tscn" id="5_n5j6i"]
[ext_resource type="PackedScene" path="res://level_2.tscn" id="6_m8ls0"]
=======
[ext_resource type="AudioStream" uid="uid://c1586ob7c6sfo" path="res://space-ambience-56265.mp3" id="4_icl74"]
>>>>>>> 0915821e5da44ee2be2dbbf80583f1c78f000a7f

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_hyk1b"]
load_path = "res://.godot/imported/Space Background.png-336e8e0cf22ef6bfc0fc13c3df69c801.ctex"

[node name="main" type="Node"]

[node name="game" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_hp4ah")

[node name="Bg" type="Sprite2D" parent="game"]
position = Vector2(571, 325)
scale = Vector2(0.596875, 0.598148)
texture = SubResource("CompressedTexture2D_hyk1b")

[node name="Sprite2D" type="Sprite2D" parent="game/Bg"]
position = Vector2(-10.0524, -280.867)
scale = Vector2(1.95392, 1.95373)
texture = ExtResource("2_0tulo")

[node name="Sprite2D2" type="Sprite2D" parent="game/Bg"]
position = Vector2(-803.534, 398.344)
scale = Vector2(0.593822, 0.543468)
texture = ExtResource("3_74gwj")

[node name="MainContainer" type="VBoxContainer" parent="game"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -415.0
offset_top = -86.0
offset_right = 405.0
offset_bottom = 194.0
grow_horizontal = 2
grow_vertical = 2

[node name="Start_button" type="Button" parent="game/MainContainer"]
layout_mode = 2
text = "START GAME"
script = ExtResource("3_p8ok8")

[node name="Option_button" type="Button" parent="game/MainContainer"]
layout_mode = 2
text = "OPTION"

[node name="Exit_button" type="Button" parent="game/MainContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "EXIT
"

[node name="OptionContainer" type="VBoxContainer" parent="game"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(500, 500)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabContainer" type="TabContainer" parent="game/OptionContainer"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
tab_alignment = 1

[node name="Sound" type="TabBar" parent="game/OptionContainer/TabContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="game/OptionContainer/TabContainer/Sound"]
position = Vector2(26, 103.5)
stream = ExtResource("4_icl74")
autoplay = true

[node name="General_Label" type="Label" parent="game/OptionContainer/TabContainer/Sound"]
layout_mode = 0
offset_left = 10.0
offset_top = 46.0
offset_right = 48.0
offset_bottom = 69.0
text = "General volume :"

[node name="General_HScrollBar" type="HScrollBar" parent="game/OptionContainer/TabContainer/Sound"]
layout_mode = 0
offset_left = 10.0
offset_top = 78.0
offset_right = 458.0
offset_bottom = 94.0
value = 70.0
rounded = true

[node name="Scroll_Label" type="Label" parent="game/OptionContainer/TabContainer/Sound/General_HScrollBar"]
layout_mode = 0
offset_left = 456.0
offset_top = -5.0
offset_right = 489.0
offset_bottom = 21.0
text = "70%"
script = ExtResource("4_1p308")

[node name="Music_Label" type="Label" parent="game/OptionContainer/TabContainer/Sound"]
layout_mode = 0
offset_left = 10.0
offset_top = 99.0
offset_right = 142.0
offset_bottom = 125.0
text = "Music volume :"

[node name="Music_HScrollBar" type="HScrollBar" parent="game/OptionContainer/TabContainer/Sound"]
layout_mode = 0
offset_left = 10.0
offset_top = 124.0
offset_right = 458.0
offset_bottom = 140.0
value = 67.0
rounded = true

[node name="Scroll_Label" type="Label" parent="game/OptionContainer/TabContainer/Sound/Music_HScrollBar"]
layout_mode = 0
offset_left = 456.0
offset_top = -5.0
offset_right = 489.0
offset_bottom = 21.0
text = "67%"
script = ExtResource("4_1p308")

[node name="SFX_Label" type="Label" parent="game/OptionContainer/TabContainer/Sound"]
layout_mode = 0
offset_left = 10.0
offset_top = 146.0
offset_right = 142.0
offset_bottom = 172.0
text = "SFX volume :"

[node name="SFX_HScrollBar" type="HScrollBar" parent="game/OptionContainer/TabContainer/Sound"]
layout_mode = 0
offset_left = 10.0
offset_top = 171.0
offset_right = 458.0
offset_bottom = 187.0
value = 67.0
rounded = true

[node name="Scroll_Label" type="Label" parent="game/OptionContainer/TabContainer/Sound/SFX_HScrollBar"]
layout_mode = 0
offset_left = 456.0
offset_top = -5.0
offset_right = 489.0
offset_bottom = 21.0
text = "67%"
script = ExtResource("4_1p308")

[node name="Container" type="HBoxContainer" parent="game/OptionContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Apply_button" type="Button" parent="game/OptionContainer/Container"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
text = "Apply
"

[node name="Return_button" type="Button" parent="game/OptionContainer/Container"]
layout_mode = 2
text = "Return
"

[node name="Level 1" parent="." instance=ExtResource("5_6feo4")]

[node name="Level 2" parent="Level 1" instance=ExtResource("6_m8ls0")]

[node name="character" parent="Level 1" instance=ExtResource("5_n5j6i")]

[connection signal="pressed" from="game/MainContainer/Start_button" to="game" method="_on_start_button_pressed"]
[connection signal="pressed" from="game/MainContainer/Option_button" to="game" method="_on_option_button_pressed"]
[connection signal="pressed" from="game/MainContainer/Exit_button" to="game" method="_on_exit_button_pressed"]
[connection signal="value_changed" from="game/OptionContainer/TabContainer/Sound/General_HScrollBar" to="game" method="_on_general_h_scroll_bar_value_changed"]
[connection signal="value_changed" from="game/OptionContainer/TabContainer/Sound/General_HScrollBar" to="game/OptionContainer/TabContainer/Sound/General_HScrollBar/Scroll_Label" method="_on_h_scroll_bar_value_changed"]
[connection signal="value_changed" from="game/OptionContainer/TabContainer/Sound/Music_HScrollBar" to="game" method="_on_music_h_scroll_bar_value_changed"]
[connection signal="value_changed" from="game/OptionContainer/TabContainer/Sound/Music_HScrollBar" to="game/OptionContainer/TabContainer/Sound/Music_HScrollBar/Scroll_Label" method="_on_h_scroll_bar_value_changed"]
[connection signal="value_changed" from="game/OptionContainer/TabContainer/Sound/SFX_HScrollBar" to="game" method="_on_sfx_h_scroll_bar_value_changed"]
[connection signal="value_changed" from="game/OptionContainer/TabContainer/Sound/SFX_HScrollBar" to="game/OptionContainer/TabContainer/Sound/SFX_HScrollBar/Scroll_Label" method="_on_h_scroll_bar_value_changed"]
[connection signal="pressed" from="game/OptionContainer/Container/Apply_button" to="game" method="_on_apply_button_pressed"]
[connection signal="pressed" from="game/OptionContainer/Container/Return_button" to="game" method="_on_return_button_pressed"]
